# fishbone-access

./: .env.example  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
blog/artifacts/: README.md  benchmark-results.json  compliance-test-results.txt  connector-test-matrix.txt  handler-test-results.txt  seed-summary.json
blog/posts/: 00-series-intro.md  01-singapore-fintech-pdpa-mas-trm.md  02-us-healthcare-hipaa-ccpa.md  03-germany-retail-bdsg-c5-gdpr.md  04-vietnam-logistics-pdpd-decree13.md  05-uae-finance-pdpl-desc-pam.md  06-australia-saas-essential-eight-soc2.md  07-benchmarks-on-this-vm.md  08-architecture-overview.md  09-data-model.md  10-building-the-connector-fabric.md  11-pam-workflow-engine.md  12-discovery-and-onboarding.md  13-cross-replica-ha.md  README.md
cmd/access-ai-agent/: .gitignore  main.py  mtls.py  pyproject.toml  requirements-dev.txt  requirements.txt
cmd/access-ai-agent/skills/: __init__.py  access_anomaly_detection.py  access_review_automation.py  access_risk_assessment.py  connector_setup_assistant.py  errors.py  llm.py  numeric.py  pam_behavioural_analytics.py  pam_session_risk_assessment.py  policy_recommendation.py
cmd/access-ai-agent/tests/: conftest.py  test_app.py  test_integration_mtls.py  test_llm.py  test_mtls.py  test_skills.py
deploy/: README.md  SCALE_SIZING.md
docs/: iam-core-integration.md  openapi.yaml
scripts/: security-audit.sh
ui/: DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  vite.config.ts
(+2335 files in other folders)
